# HostEngine

./: CMakeLists.txt  CMakeLists.txt.1  CMakeLists.txt.1.good
.vscode.current/: launch.json
client/: CMakeLists.txt  HPUclient.cpp
protos/: CMakeLists.txt  habana.proto
server/: CMakeLists.txt  HPUserver.cpp
src/: HPU_async_server.cpp  HPUclient.cpp  HPUserver.cpp
