cmake_minimum_required(VERSION 3.14.4)
project(HabanaLabs_HPUclient)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Protobuf REQUIRED)
find_package(Threads REQUIRED)
find_package(gRPC CONFIG REQUIRED)
if (gRPC_FOUND)
   Message("Find grpc package")
   set(GRPC_REFLECTION gRPC::grpc++_reflection)
else()
   Message("Not find grpc package")
   set(GRPC_REFLECTION grpc++_reflection)
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(/usr/local/include)
link_directories(/usr/local/lib)

set(PROTO_PATH "${CMAKE_SOURCE_DIR}/protos")
set(HABANA_PROTO "${PROTO_PATH}/habana.proto")
set(GENERATED_PROTOBUF_PATH "${CMAKE_BINARY_DIR}/generated")
file(MAKE_DIRECTORY ${GENERATED_PROTOBUF_PATH})

set(GENERATED_PROTOBUF_LIB "${CMAKE_BINARY_DIR}/protos/libprotolibStatic.a")
message("${GENERATED_PROTOBUF_LIB}")

#include_directories(${CMAKE_BINARY_DIR}/protos)
include_directories(${GENERATED_PROTOBUF_PATH})
#foreach(target HPUclient)
set(target HPUclient)
add_executable(${target} ${CMAKE_CURRENT_SOURCE_DIR}/${target}.cpp)
target_link_libraries(${target} ${GRPC_REFLECTION} grpc++  ${GENERATED_PROTOBUF_LIB})
#endforeach()
